--- a/flask-login/src/templates/auth/login.html
+++ b/flask-login/src/templates/auth/login.html
@@ -13,26 +13,35 @@
 
 
     <form class= "form-signin w-100 m-auto" action="/login" method="POST">
-      <img class="mb-4" src="{{ url_for('static', filename= 'img/flask.png') }}" alt="" width="72" height="57">
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-  
+      <img class="mb-4" src="{{ url_for('static', filename= 'img/logo_casabermeja.png') }}" alt="" width="250" height="250">
+      {% with messages = get_flashed_messages()%}
+      
+      {%if messages %}
+      <br/>
+      {% for message in messages %}
+      <div class="alert alert-primary alert-dismissible" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" arial-label="Close"></button>
+
+
+      </div>
+      {% endfor %}
+      {% endif %}
+
+      {% endwith %}
+      <h1 class="h3 mb-3 fw-normal">Introduce información de usuario</h1>
+      <input type="hidden" name="csrf_token" value="{{ csrf_token()  }}">
       <div class="form-floating">
         <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
-        <label for="email">Email address</label>
+        <label for="email">Correo electrónico</label>
       </div>
       <div class="form-floating mt-2">
         <input type="password" class="form-control" name="password" placeholder="Password">
-        <label for="password">Password</label>
+        <label for="password">Contraseña</label>
       </div>
   
-      <div class="form-check text-start my-3">
-        <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-          Remember me
-        </label>
-      </div>
-      <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
+      <button class="btn btn-primary w-100 py-2" type="submit">Iniciar sesión</button>
+      
     </form>
 
 {% endblock %}
